--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "selenium-webdriver",
-  "version": "2.44.0",
+  "version": "2.44.0-phantom",
   "description": "The official WebDriver JavaScript bindings from the Selenium project",
   "keywords": [
     "automation",
